# lltz

./: .gitmodules  Makefile  README.md  dune  dune-project  flake.nix  lltz.opam  lltz_ir.opam  shell.nix  toggle_lltz_separate_build.sh
lib/: common.ml  dune  expr.ml  lltz_ir.ml  primitive.ml  recursion.ml  recursion_implementations.ml  rose_tree.ml  type.ml  utils.opam
lib/lltz_codegen/: config.ml  dune  ident.ml  instruction.ml  last_vars.ml  lltz_codegen.ml  slot.ml  stack.ml  type.ml
lib/lltz_ir/: annotations.ml  ast_builder.ml  common.ml  dsl.ml  dune  expr.ml  free_vars.ml  import.ml  lltz_ir.ml  name.ml  primitive.ml  recursion.ml  rose_tree.ml  row.ml  type.ml
lib/lltz_michelson/: ast.ml  dune  instruction.ml  lltz_michelson.ml  stack.ml  type.ml
lib/lltz_michelson/optimisations/: dune  rewriter.ml
lib/lltz_michelson/optimisations/smartpy_core/: dune  michelson.ml  michelson_rewriter.ml
lib/lltz_michelson/optimisations/smartpy_michelson_base/: dune  primitive.ml  primitive.mli  type.ml  type.mli  typing.ml  typing.mli
lib/lltz_michelson/optimisations/smartpy_utils/: dune
lib/michel/: dune  expr.ml  expr.mli  type.ml  type.mli
lib/michel_lltz/: dune  michel_to_lltz.ml
lib/michelson/: ast.ml  dune
lib/michelson/optimisations/: dune  if_suffix_rewriter.ml  rewriter.ml  smartpy_lltz_interopt.ml
lib/michelson/optimisations/michelson_base/: dune  primitive.ml  primitive.mli  protocol.ml  protocol.mli  type.ml  type.mli  typing.ml  typing.mli
lib/michelson/optimisations/oasis_core/: config.ml  dune  hole.ml  literal.ml  micheline.ml  michelson.ml  michelson_rewriter.ml  varId.ml
lib/michelson/optimisations/utils/: base58.mli  bigint.ml  bigint.mli  binary_tree.ml  bs58.mli  control.ml  control.mli  crypto.mli  data.ml  data.mli  dune  map.ml  map.mli  misc.ml  misc.mli  option.mli  string.mli  ternary.ml
lib/michelson_base/: dune  primitive.ml  primitive.mli  protocol.ml  protocol.mli  type.ml  typing.ml  typing.mli
lib/utils/: base58.ml  bigint.mli  binary_tree.mli  bs58.ml  control.ml  control.mli  crypto.ml  dune  int.ml  int.mli  io.ml  io.mli  list.ml  list.mli  logging.ml  logging.mli  misc.mli  option.ml  pair.ml  set.ml  set.mli  string.ml  ternary.mli
nix/: haskell-overlay.nix  ligo.nix  lltz.nix  overlay.nix  tree-sitter-typescript.nix
test/: README.md  dune  test_all_vars.ml  test_dsl.ml  test_free_vars.ml  test_last_vars.ml  test_michelson_rewrites.ml  test_nodes.ml  test_used_vars.ml
vendors/: dune
vendors/tezos-utils/: dune
