(library
 (name michelson_optimisations)
 (public_name lltz.michelson.optimisations)
 (libraries
  core
  octez-libs.micheline
  michelson
  lltz.michelson.optimisations.utils
  lltz.michelson.optimisations.michelson_base
  lltz.michelson.optimisations.oasis_core
 )
 (preprocess
  (pps
   ppx_expect
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_deriving.map
   ppx_deriving.fold
   ppx_sexp_conv
   ppx_yojson_conv)))