(library
 (name smartpy_core)
 (public_name lltz.michelson.optimisations.smartpy_core)
 (libraries
  core
  octez-libs.micheline
  lltz.michelson
  lltz.michelson.optimisations.smartpy_utils
  lltz.michelson.optimisations.smartpy_michelson_base)
 (flags
  (:standard -w -9))
 (preprocess
  (pps
   ppx_expect
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.show
   ppx_deriving.map
   ppx_deriving.fold
   ppx_sexp_conv
   ppx_yojson_conv)))
